--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"   lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Scholarship Fund of Alexandria Homepage Contacts</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/jpg" href="scholarshipfundofalex.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header"> 
@@ -79,20 +82,11 @@
         </div>
       </div>
 
-
-
-
-
-
-
-
-
-
 <footer>
         <div id="footer">
             <p> 3330 King Street Alexandria, VA 22302</p> <br>
              <p> Find Contacts <a href="contact.html" style=" color: rgb(12, 224, 231);">  here </a> </p> <br>
-             <p> Copyright &copy;2023 | Developed by Nathan Biru | Mock website</p> <br>
+             <p> Copyright &copy;2023 | Developed by Nathan Biru | Mock website | Sources <a style="color: aqua;"   href="sources.html"> here</a></p> <br>
          </div>
 </footer>
     
