--- a/mission.html
+++ b/mission.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"   lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Scholarship Fund of Alexandria Mission</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/jpg" href="scholarshipfundofalex.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header"> 
@@ -72,10 +75,6 @@
     <li style="font-size: 30px;"> Assisted many ACHS students in their college application process:</li>  <p style="font-size: 25px;">  We Run the College and Career Center at ACHS</p>
     <li style="font-size: 30px;"> Partnered with over 10 prominent companies to provide Scholarships:</li>  <p style="font-size: 25px;">  This includes Amazon, Toyota, and many more</p>
     <li style="font-size: 30px;"> Held community events to fundraise and bring the community together:</li>  <p style="font-size: 25px;">  Events like Galas, Appreciation events, and more</p>
-
-
-
-
 </ul>
 </div>
 
@@ -83,7 +82,7 @@
     <div id="footer" style="margin: 0px;">
         <p> 3330 King Street Alexandria, VA 22302</p>
          <p> Find Contacts <a href="contact.html" style=" color: rgb(12, 224, 231);">  here </a> </p>
-         <p> Copyright &copy;2023 | Developed by Nathan Biru | Mock website</p>
+         <p> Copyright &copy;2023 | Developed by Nathan Biru | Mock website | Sources <a style="color: aqua;"   href="sources.html"> here</a></p>
      </div>
  </footer>
 
